updated openapi spec of ManagementApi to include task stop/start and optional json body with DateTime (with @MarcoDoell and @LutskiYevgeniy)
